# auto-context

./: .gitignore  Cargo.toml  flake.nix  readme.md
auto-context/: Cargo.toml
auto-context/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
