[package]
name = "auto-context"
version = "0.1.1"
edition = "2021"
license = "CC0-1.0"
description = "Auto-add context to anyhow errors (without nightly)"
readme = "../readme.md"
repository = "https://github.com/enricozb/auto-context"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full", "visit-mut"] }

[dev-dependencies]
anyhow = "1.0.95"
indoc = "2.0.5"
